--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,4 @@
-/* possible color palette
-#44AF69
+/* #44AF69
 #F8333C
 #FCAB10
 #2B9EB3
@@ -7,7 +6,7 @@
 
 body {
     font-family: 'Khula', sans-serif;
-    background-color: ;
+    background-color: black;
 }
 
 h1 {
@@ -16,25 +15,53 @@ h1 {
     font-size: 100px;
     text-align: center;
     border: 2px solid #2B9EB3;
+
+    --hue: 0;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: hsl(var(--hue), 50%, 95%);
+    text-shadow:
+        0 0 15px hsl(var(--hue), 60%, 90%, .80),
+        0 0 20px hsl(var(--hue), 70%, 80%, .85),
+        0 0 40px hsl(var(--hue), 80%, 70%, .90),
+        0 0 60px hsl(var(--hue), 90%, 60%, .95),
+        0 0 80px hsl(var(--hue), 100%, 50%, 1)
+}
+
+h1:hover {
+    box-shadow: 5px 5px 10px 1px #2B9EB3;
+    transition: 500ms;
 }
 
 .menu {
+    display: flex;
     background-color: black;
     position: sticky;
     top: 0;
     border: 2px solid #2B9EB3;
+    justify-content: center;
+}
+
+.menu:hover {
+    box-shadow: 5px 5px 10px 1px #2B9EB3;
+    transition: 500ms;
 }
 
 nav li {
     display: inline-flex;
-    justify-content: center;
     font-size: 2em;
-    padding-right: 2em;
+    padding-right: 3em;
+    text-shadow: 1px 1px 2px #F8333C, 0 0 1em #FCAB10, 0 0 0.2em #2B9EB3;
 }
 
 nav a {
     text-decoration: none;
     color: white;
+}
+
+nav a:hover {
+    color: #F8333C;
+    transition: 200ms;
 }
 
 .gardelLogo {
