--- a/css/home.css
+++ b/css/home.css
@@ -5,18 +5,16 @@
 #DBD5B5 */
 
 body {
-    font-family: 'Khula', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     background-color: black;
+    color: white;
 }
 
 h1 {
-    font-family: 'Khula', sans-serif;
     font-weight: 700;
     font-size: 100px;
     text-align: center;
-    border: 2px solid #2B9EB3;
-
-    --hue: 0;
+    /* --hue: 0;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 4px;
     -webkit-text-stroke-color: hsl(var(--hue), 50%, 95%);
@@ -25,34 +23,22 @@ h1 {
         0 0 20px hsl(var(--hue), 70%, 80%, .85),
         0 0 40px hsl(var(--hue), 80%, 70%, .90),
         0 0 60px hsl(var(--hue), 90%, 60%, .95),
-        0 0 80px hsl(var(--hue), 100%, 50%, 1)
+        0 0 80px hsl(var(--hue), 100%, 50%, 1) */
 }
-
-h1:hover {
-    box-shadow: 5px 5px 10px 1px #2B9EB3;
-    transition: 500ms;
-}
-
 
 .menu {
     display: flex;
-    background-color: black;
     position: sticky;
     top: 0;
-    border: 2px solid #2B9EB3;
     justify-content: center;
-}
-
-.menu:hover {
-    box-shadow: 5px 5px 10px 1px #2B9EB3;
-    transition: 500ms;
 }
 
 nav li {
     display: inline-flex;
-    font-size: 2em;
+    font-size: 1.5em;
     padding-right: 3em;
-    text-shadow: 1px 1px 2px #F8333C, 0 0 1em #FCAB10, 0 0 0.2em #2B9EB3;
+    text-decoration: none;
+    /* text-shadow: 1px 1px 2px #F8333C, 0 0 1em #FCAB10, 0 0 0.2em #2B9EB3; */
 }
 
 nav a {
@@ -70,6 +56,50 @@ nav a:hover {
     align-items: center;
 }
 
-p {
-    color: white;
+#fullBandPhoto {
+    max-width: 90%;
+}
+
+.introContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: url("https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/312822367_10228797397020760_3754353643014589453_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=3b7ae0&_nc_ohc=HEnbfkKH1BMAX93jNVV&_nc_ht=scontent-iad3-2.xx&oh=00_AT_DDmi7eVr-8AhcnxxEmVGwaHG0IJsMvZ2OcWYO5PZHig&oe=635CBAD7");
+    background-size: 100%;
+    padding-bottom: 500px;
+}
+
+.bandImg {
+    display: flex;
+    justify-content: center;
+}
+
+.aboutBand {
+    background-image: url("https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/312909302_10228797431741628_2768536362899170228_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=730e14&_nc_ohc=uzcBfJHobJkAX8Yr11g&tn=HeDUMjhYoB1kCXUX&_nc_ht=scontent-iad3-2.xx&oh=00_AT84gBshoTL7LGQpWTXXnqyxu87P4VhDCAkPdwhdva5aUQ&oe=635CABC3");
+    background-size: 100%;
+    padding-bottom: 500px;
+}
+
+.music {
+    background-image: url("https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/313087303_10228797432621650_1564889843554114344_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=730e14&_nc_ohc=QATB_Q-ps9IAX923Brw&_nc_ht=scontent-iad3-2.xx&oh=00_AT_F0uks3PZA7o4RmfrG4N1btwtItM1bu7SVaBd977DEEw&oe=635D4443");
+    background-size: 100%;
+    padding-bottom: 500px;
+}
+
+#music,
+#about {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#music img,
+#about img {
+    max-width: 40%;
+    padding: 5px;
+}
+
+h2 {
+    font-size: 3em;
+    margin: 0;
 }
