--- a/css/home.css
+++ b/css/home.css
@@ -5,15 +5,14 @@
 #DBD5B5 - dutch white */
 
 body {
-    font-family: 'Roboto Mono', monospace;
-    /* background-color: black; */
+    font-family: 'Roboto', sans-serif;
     color: white;
     margin: 0px;
 }
 
 h1 {
     font-weight: 400;
-    font-size: 100px;
+    font-size: 50px;
     text-align: center;
     padding: 50px;
     margin: 0px;
@@ -35,7 +34,7 @@ h2 {
 
 nav li {
     display: inline-flex;
-    font-size: 1.5em;
+    font-size: 1em;
     padding-right: 3em;
     text-decoration: none;
 }
@@ -52,7 +51,7 @@ nav a:hover {
 }
 
 .gardelLogo {
-    width: 50px;
+    width: 30px;
     align-items: center;
 }
 
@@ -79,6 +78,8 @@ nav a:hover {
     font-size: 3em;
     font-weight: 300;
     opacity: 1;
+    text-align: center;
+    opacity: 0;
 }
 
 .aboutBand div {
@@ -100,7 +101,7 @@ nav a:hover {
     margin: 3em;
 }
 
-/* .bandImg {
+/* .bandImg 
     display: flex;
     justify-content: center;
 } */
@@ -114,9 +115,9 @@ nav a:hover {
     background-position-y: center;
 }
 
-#music img,
-#about img {
-    max-width: 40%;
+#music img {
+    display: inline-flex;
+    max-width: 30%;
     padding: 5px;
 }
 
